--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,9 @@
 <div class="col-12">
     <% @news.each do |news| %>
   
-        <h3><%= news.title %></h3>
+        <h3><%= news.title.titleize %></h3>
 
-        <h5><%= news.subtitle %></h5>
+        <h5 class="text-muted"><%= news.subtitle.titleize %></h5>
         <p><%= news.published %></p>
         <p><%= news.body %></p>
         <p><%= link_to 'Show', news %></p>
