--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -10,6 +10,10 @@
       </ul>
     </div>
   <% end %>
+<div class="form-group">
+<%= form.label :cover_picture %>
+<%= form.file_field :cover_picture%>
+</div>
 
   <div class="field">
     <%= form.label :title %>
