--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -10,6 +10,8 @@
   <%= @news.subtitle %>
 </p>
 
+<%= image_tag @news.cover_picture, :class => "img-fluid" %>
+
 <p>
   <strong>Body:</strong>
   <%= @news.body %>
