--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,13 @@
         <h3><%= news.title.titleize %></h3>
 
         <h5 class="text-muted"><%= news.subtitle.titleize %></h5>
-        <%= image_tag news.cover_picture, :class => "img-fluid" %>
-        <p><%= news.published %></p>
+        <p><%= news.published.strftime("%B %d, %Y") %></p>
+       <%= image_tag news.cover_picture.variant(resize: "200x200", bordercolor: "red", border: "5%x5%"), :class => "img-fluid" %>
+<!--        <%= image_tag news.cover_picture.variant( combine_options: {
+    gravity: 'center',
+    draw: 'image Over 0,0 0,0 "'+news.subtitle+'"'
+  }), :class => "img-fluid" %> -->
+        
         <p><%= news.body %></p>
         <p><%= link_to 'Show', news %></p>
         <hr/>
@@ -23,7 +28,3 @@
 
 
 </div>
-
- <br/>
-
-<%= link_to 'Make News', new_news_path, :class  => "btn btn-lg btn-primary" %>
