--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,26 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @news.title %>
-</p>
+<h1>
+  <%= @news.title.titleize %>
+</h1>
 
-<p>
-  <strong>Subtitle:</strong>
-  <%= @news.subtitle %>
-</p>
-
+<h3 class="text-muted">
+  <%= @news.subtitle.titleize %>
+  
+</h3>
+<h5> <%= @news.published.strftime("%B %d, %Y") %></h5>
 <%= image_tag @news.cover_picture, :class => "img-fluid" %>
 
 <p>
-  <strong>Body:</strong>
   <%= @news.body %>
 </p>
 
-<p>
-  <strong>Published:</strong>
-  <%= @news.published %>
-</p>
 
 <p>
   <strong>Updated:</strong>
