--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,23 +6,34 @@
 <div class="col-12">
     <% @news.each do |news| %>
   
-        <h3><%= news.title.titleize %></h3>
+<div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12 order-1 order-lg-1 order-sm-1">
+            <%= image_tag news.cover_picture.variant( charcoal: ".10", border: "5%x5%", flop: true), :class => "img-fluid" %>
+        </div>
 
-        <h5 class="text-muted"><%= news.subtitle.titleize %></h5>
-        <p><%= news.published.strftime("%B %d, %Y") %></p>
-       <%= image_tag news.cover_picture.variant(resize: "200x200", bordercolor: "red", border: "5%x5%"), :class => "img-fluid" %>
-<!--        <%= image_tag news.cover_picture.variant( combine_options: {
-    gravity: 'center',
-    draw: 'image Over 0,0 0,0 "'+news.subtitle+'"'
-  }), :class => "img-fluid" %> -->
-        
-        <p><%= news.body %></p>
-        <p><%= link_to 'Show', news %></p>
+        <div class="col-lg-6 col-md-12  col-sm-12 col-12 order-2 order-lg-2 order-sm-2">
+            <span class=""><%= news.published.strftime("%B %d, %Y") %></span>
+            <br>
+            <br>
+            <h2 class="verlag-bold"><%= news.title.titleize %></h2>
+            <h3 class="text-muted"><%= news.subtitle.titleize %></h5>
+            <h4><%= news.published.strftime("%B %d, %Y") %></h4>
+            <p class="">
+			<%= news.body %>
+		    </p>
+            <p>
+			    <%= link_to 'Read More...', news %>
+		    </p>
+        </div>
+    </div>
+		<br/>
         <hr/>
 
 
     <% end %>
 </div>
+
+
 
 
 
