--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 			<%= news.body %>
 		    </p>
             <p>
-			    <%= link_to 'Read More...', news %>
+			    <%= link_to 'Read More...', news, :class => 'btn btn-dark' %>
 		    </p>
         </div>
     </div>
